--- a/app/views/courses/course_chart.js.erb
+++ b/app/views/courses/course_chart.js.erb
@@ -89,8 +89,8 @@ $(function () {
     });
 <%else%>
 $('#container-score').remove() ;
-//alert("no data");
+alert("no data");
 <% end %>    
 });
 
-//alert('<%=raw @res_score.to_s%>');
+
