--- a/app/views/user/import_course_2.html.erb
+++ b/app/views/user/import_course_2.html.erb
@@ -28,6 +28,8 @@ $(document).ready(function(){
 
 </script>
 
+<% @show_report=false %>
+
 <% if current_user.is_undergrad %>
 <%=render :partial=>"/user/xtmpl_common_check"%>
 <% end %>
