--- a/app/views/course_maps/_form.html.erb
+++ b/app/views/course_maps/_form.html.erb
@@ -29,7 +29,7 @@
 					</div>
 					<div class="col-md-5">
 
-						<%= f.select :department_id, options_from_collection_for_select(Department.where(:degree=>[2,3]).order("degree DESC").prepend(test),"id","ch_name"),{} ,{:class=>"form-control"}  %>
+						<%= f.select :department_id, options_from_collection_for_select(Department.where('degree IN (2,3) AND use_type != ?', "no_courses").order("degree DESC").prepend(test),"id","ch_name"),{} ,{:class=>"form-control"}  %>
 					</div>
 				</div>
 				<div class="row">
