--- a/app/views/user/statistics2.html.erb
+++ b/app/views/user/statistics2.html.erb
@@ -11,13 +11,26 @@
 	<div id="course_list" class="">
 	</div>
 </div>
+<div class="modal fade" id="courselist_modal" tabindex="-1" role="dialog" aria-hidden="true" >
+	<div class="modal-dialog" >
+		
+			<!--<div class="modal-footer">
+				<button type="button" class="btn btn-primary">Purchase</button>
+				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+			</div>-->
+
+	</div>
+</div>
+
 <script>
 $(document).ready(function(){
 	$.getJSON("/user/statistics2?uid=<%=params[:uid] %>", function (data) {
 		<% if @user.is_undergrad %>
 		$("#common_check_div").html(tmpl("common_check",data));
 		<% end %>
-		$("#cosmap_check_div").html(tmpl("cosmap_check",data));
+		if(data["course_map"]){
+			$("#cosmap_check_div").html(tmpl("cosmap_check",data));
+		}
 		$("#course_list").html(tmpl("list_by_cosmap",data));
 		console.log(data);
 	});
@@ -26,8 +39,11 @@ $(document).ready(function(){
 
 </script>
 
+<% @show_report=true %>
+
 <% if @user.is_undergrad %>
 <%=render :partial=>"/user/xtmpl_common_check"%>
 <% end %>
 <%=render :partial=>"/user/xtmpl_cm_check"%>
 <%=render :partial=>"/user/xtmpl_list_by_cosmap"%>
+<%=render :partial=>"/user/xtmpl_cm_showlist"%>
