--- a/app/views/courses/course_chart.js.erb
+++ b/app/views/courses/course_chart.js.erb
@@ -85,11 +85,11 @@ $(function () {
 				
         
 				
-        
+          
     });
 <%else%>
 $('#container-score').remove() ;
-alert("no data");
+//alert("no data");
 <% end %>    
 });
 
