update_cs_cf when select dept5

--- a/app/views/user/statistics2.html.erb
+++ b/app/views/user/statistics2.html.erb
@@ -28,6 +28,7 @@ $(document).ready(function(){
 		<% if @user.is_undergrad %>
 		$("#common_check_div").html(tmpl("common_check",data));
 		<% end %>
+		console.log(data);
 		if(data["course_map"]){
 			$("#cosmap_check_div").html(tmpl("cosmap_check",data));
 		}
