stat table js&css2

--- a/app/views/user/statistics_table.html.erb
+++ b/app/views/user/statistics_table.html.erb
@@ -8,9 +8,9 @@
 <html>
 <head>
 	<title class='title'>NCTU+</title>
-	<%=javascript_include_tag asset_path("jquery.js")%>
+	<%=javascript_include_tag asset_path("application.js")%>
 	<%=javascript_include_tag asset_path("tmpl.min.js")%>
-	<%= stylesheet_link_tag asset_path("bootstrap.css") %>
+	<%= stylesheet_link_tag asset_path("application.css") %>
 </head>
 <div id="table">Loading...</div>
 <hr>
