--- a/app/views/course_maps/start2.html.erb
+++ b/app/views/course_maps/start2.html.erb
@@ -40,7 +40,7 @@ th, td {
 <%=render "xtmpl_course_list" %>
 <%=render "xtmpl_course_group_list" %>
 
-<%=javascript_include_tag "bootstrap-treeview"%>
+<%=javascript_include_tag asset_path("bootstrap-treeview.js") %>
 <script>
 var cf_show_id = null ;
 var cg_show_id = null ;
